0.04 Sat Feb 16 14:19:21 EST 2008 
-------------------------------------
	- ported to Module::Build 
	- ported tests to Test::More and added some sorely needed Kwalitee
	- one can now access computed values with $o->values_at() which 
	  returns an array of values at a given point 
	- default behaviour changes to retain values internally instaed of printing to STDOUT 
	  if no { file => $foo } attribute was given
	- one can turn off saving computing values in memory with keep_values = 0 in the
	  arguments to init like 

	  my $ode = new Math::ODE ( file => 'data', keep_values => 0, etc... );

	  This may be useful if you have a fine mesh size and/or long batch jobs.

	- $o->evolve() now return true on success and undefined on numerical error

0.03 Fri Dec 14 03:52:33 EST 2001 
-------------------------------------
	- added verbose()

0.02  Wed Dec 12 13:29:46 EST 2001
--------------------------------------
	- killed "use warnings" generated by h2xs to placate < 5.6 perls

0.01  Wed Dec 12 02:20:45 EST 2001 
--------------------------------------
	- First release
