@@ -1,0 +1,4 @@
+
+
+* detect stiff ODE's and other pathological cases and give some kind of warning
+* big floats
